@@ -1040,5 +1040,128 @@ namespace MeGUI.core.util
             }
         }
 
+        /// <summary>
+        /// Gets the Haali Installation Directory (may not exist)
+        /// </summary>
+        /// <returns></returns>
+        public static string GetHaaliInstalledPath()
+        {
+            string path = string.Empty;
+            try
+            {
+                // fallback to the included Haali
+                path = Path.GetDirectoryName(MainForm.Instance.Settings.Haali.Path);
+
+                // try to find the GUID - only the 32bit version is used for eac3to
+                Microsoft.Win32.RegistryKey view32 = Microsoft.Win32.RegistryKey.OpenBaseKey(Microsoft.Win32.RegistryHive.ClassesRoot, Microsoft.Win32.RegistryView.Registry32);
+                Microsoft.Win32.RegistryKey key = view32.OpenSubKey(@"CLSID\{55DA30FC-F16B-49FC-BAA5-AE59FC65F82D}\InprocServer32");
+
+                if (key == null)
+                    return path;
+
+                string value = (string)key.GetValue(null);
+                if (string.IsNullOrEmpty(value) || !File.Exists(value))
+                    return path;
+
+                value = Path.GetDirectoryName(value);
+                if (!Directory.Exists(value))
+                    return path;
+
+                return value;
+            }
+            catch
+            {
+                return path;
+            }
+        }
+
+        /// <summary>
+        /// Checks if Haali Media Splitter is installed
+        /// </summary>
+        /// <returns></returns>
+        public static bool IsHaaliInstalled()
+        {
+            try
+            {
+                // 55DA30FC-F16B-49FC-BAA5-AE59FC65F82D = Haali Matroska Splitter GUID
+#if x86
+                // proper check for x86 builds as there the splitter directly can be checked
+                Type comtype = Type.GetTypeFromCLSID(new Guid("55DA30FC-F16B-49FC-BAA5-AE59FC65F82D"));
+                object comobj = Activator.CreateInstance(comtype);
+#endif
+#if x64
+                // only check based on the registry of the splitter is installed
+                Microsoft.Win32.RegistryKey view32 = Microsoft.Win32.RegistryKey.OpenBaseKey(Microsoft.Win32.RegistryHive.ClassesRoot, Microsoft.Win32.RegistryView.Registry32);
+                Microsoft.Win32.RegistryKey key = view32.OpenSubKey(@"CLSID\{55DA30FC-F16B-49FC-BAA5-AE59FC65F82D}\InprocServer32");
+                if (key == null)
+                    return false;
+                string value = (string)key.GetValue(null);
+                if (string.IsNullOrEmpty(value) || !File.Exists(value))
+                    return false;
+                return true;
+#endif
+            }
+            catch (Exception)
+            {
+                return false;
+            }
+            return true;
+        }
+
+        /// <summary>
+        /// Installs the Haali Media Splitter
+        /// </summary>
+        /// <param name="oLog">the LogItem</param>
+        /// <returns>true if installation is successful, false if not</returns>
+        public static bool InstallHaali(ref LogItem oLog)
+        {
+            UpdateCacher.CheckPackage("haali");
+
+            if (!FileUtil.IsHaaliInstalled())
+                oLog.LogEvent("The Haali Media Splitter is not installed", ImageType.Error);
+            else
+                oLog.LogEvent("The Haali Media Splitter is installed, but does not work as expected", ImageType.Warning);
+
+            if (MessageBox.Show("The \"Haali Media Splitter\" cannot be found on your system and is needed for this kind of job.\n\nDo you want to install it now (administrative permissions are required)?", "Haali Media Splitter missing", MessageBoxButtons.YesNo, MessageBoxIcon.Warning) == DialogResult.Yes)
+            {
+                int iResult = -1;
+                try
+                {
+                    Process p = new Process();
+                    p.StartInfo.FileName = Path.Combine(Path.GetDirectoryName(MainForm.Instance.Settings.Haali.Path), "install.cmd");
+                    p.StartInfo.Verb = "runas";
+                    p.StartInfo.CreateNoWindow = true;
+                    p.StartInfo.WindowStyle = ProcessWindowStyle.Hidden;
+                    p.Start();
+                    p.WaitForExit();
+                    iResult = p.ExitCode;
+                }
+                catch (Exception ex)
+                {
+                    oLog.LogEvent("Installation failed: " + ex.Message, ImageType.Error);
+                    return false;
+                }
+                if (iResult == 0 && FileUtil.IsHaaliInstalled())
+                {
+                    oLog.LogEvent("Haali Media Splitter installed", ImageType.Information);
+                    return true;
+                }
+                else
+                {
+                    oLog.LogEvent("Installation failed: " + iResult, ImageType.Error);
+                    return false;
+                }
+            }
+            else
+            {
+                oLog.LogEvent("Installation not started", ImageType.Information);
+
+                string strText = "The \"Haali Media Splitter\" cannot be found on your system and you have selected to not install it automatically.\n\nTherefore please download the file on your own and install it. Afterwards you have to restart the job.\n\nWould you like to download it now?";
+                if (MessageBox.Show(strText, "Haali Media Splitter missing", MessageBoxButtons.YesNo, MessageBoxIcon.Information) == DialogResult.Yes)
+                    System.Diagnostics.Process.Start(@"http://haali.su/mkv/");
+
+                return false;
+            }
+        }
     }
 }
