@@ -106,7 +106,11 @@ namespace MeGUI
                         if (line.ToLowerInvariant().Contains("<error>"))
                             stdoutLog.LogEvent(line, ImageType.Error);
                         if (line.Contains("Getting \"Haali Matroska Muxer\" instance failed"))
-                            log.LogEvent("Please (re)install the Haali Matroska Muxer to fix this error", ImageType.Error);
+                        {
+                            // haalo media plitter is missing ==> try to (re)install it
+                            if (!su.WasAborted && FileUtil.InstallHaali(ref log))
+                                base.bRunSecondTime = true;
+                        }
                     }
                 }
             }
